css/custom.css
body{
    font-family: sans-serif;
    font-size: 14px;

}
*{
    box-sizing: border-box;
}
.container {
    width: 960px;
    margin: 0 auto;
}
/*Home Page Style*/
.home-bg{
    background: url("../images/ocean.jpg") no-repeat center;
    background-size: cover;
    height: 100vh;
}
.spashScreen .logo-container {
    margin-left: 40%;
}
.spashScreen {
    margin-left: 10%;
    padding-top: 10%;
}
.spashScreen h1{
    margin-top: 0;
    padding-top: 20px;
    font-size: 56px;
    margin-bottom: 10px;
}
.logo-container span{
    font-size: 30px;
    text-transform: capitalize;
}
.logo-container img{
    width: auto;
    height: 100px;
}

table.dataTable thead .sorting_asc {
  background-image: url("../images/sort_asc.png");
  background-position: 0% 61%;
}
table.dataTable thead .sorting_desc {
  background-image: url("../images/sort_desc.png");
  background-position: 0% 38%;
}
table.dataTable thead .sorting {
  background-image: url("../images/sort_desc.png");
  background-position: 0% 38%;
}

.table-content {
    float: left;
    width: 100%;
    margin-top: 10%;
}
.table-content h2 {
    font-weight: normal;
    display: inline-block;
    border: 1px solid #000;
    padding: 3px 5px;
    margin-bottom:75px; 
}
.heading{text-align: center; display: inline-block;width: 100%}
.tableStyle{
    border: 1px solid #000;
    width: 100%
}
.tableStyle tr th,.tableStyle tr td{
    border: 1px solid #000;
    height: 50px;
    font-size: 14px;
    padding-top:0 !important;
    padding-bottom:0 !important;
}
.tableStyle tr th{
    background-color: #92d36e;
    text-align: left;
    text-transform: capitalize;
    font-weight: normal !important;
}
nav{float: left}
.cancel{
    float: right;
}
.btn-grey{
    background-color: #e6e6e6;
    color: #000;
    font-size: 14px;
    border: 1px solid #000;
    line-height: 27px;
    min-width: 100px;
    text-transform: capitalize;
    text-decoration: none;
    display: inline-block;
    border-radius: 5px; 
    text-align: center;
}
button.close {
    position: absolute;
    top: 0;
    right: 0;
}
nav ul {margin: 0; padding:0}
nav ul li{
    float: left;
    margin: 0; padding: 0;
    list-style: none;
    border: 1px solid #000;
    position: relative;
}
nav> ul> li:nth-child(2){
    border-left: 0;
    border-right: 0; 
}


nav ul li a {
    color: #000;
    font-size: 14px;
    text-decoration: none;
    width: 150px;
    line-height: 30px;
    text-decoration: none;
    margin: 0;
    display: block;
    text-align: center;
    text-transform: capitalize;
}
nav>ul>li ul {
    position: absolute;
    left: -1px;
    z-index: 999;
    background: #fff;
    display: none;
    border: 1px solid #000;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px
}
nav>ul>li>ul li{
    border: none;
}
nav>ul>li>ul>li a{text-align: left; padding: 0 5px;}
nav>ul>li>ul>li a:hover{
    background-color: #e6e6e6
}
nav>ul>li:hover >ul{display: block;}
nav>ul>li>ul>li>ul{
    position: absolute;
    left: 100%;
    z-index: 999;
    background: #fff;
    top: 0;
    display: none
}
nav>ul>li>ul>li:hover >ul{display: block;}

.lineChart , .barChart{
    width: 100% !important;
    height: 400px;
}

.hide {
    display: none;
}

.buyP{
    margin-top: 80px;
}
.scrolledTable{ 
    overflow-y: auto; 
    overflow-x: hidden;
    clear:both; 
    max-height: 380px;
}

.tableStyleHeight tr th, .tableStyleHeight tr td {
    height: 10px;
    line-height: 10px;
    padding: 8px 15px !important;
}

.custom-menu {
    display: none;
    z-index: 1000;
    position: absolute;
    overflow: hidden;
    border: 1px solid #CCC;
    white-space: nowrap;
    font-family: sans-serif;
    background: #FFF;
    color: #333;
    border-radius: 5px;
    padding: 0;
}

/* Each of the items in the list */
.custom-menu li {
    padding: 8px 12px;
    cursor: pointer;
    list-style-type: none;
    transition: all .3s ease;
}

.custom-menu li:hover {
    background-color: #DEF;
}
.context-menu-item {
    padding: .45em 1em;

}
.form {
    width: 100%;
    float: left;
}
.modal-body>span{margin-bottom: 30px; display: block; text-transform: capitalize;}
.form label{width: 10%; float: left; text-transform: capitalize;}
.form .inputHold{width: 45%; float: left;padding: 0 10px}
.form input, .form select {
    width: 100%;
    height: 25px;
    border-radius: 5px;
    border: 1px solid #000
}
.pull-left{float: left;}
.pull-right{float: right;}
.form,.btnHold{margin-bottom: 30px}
.modal-content {
    padding: 35px;
    float: left;
    width: 100%;
}
h4#myModalLabel {
    text-transform: capitalize;
    font-size: 24px;
    margin-top: 0;
}
.tbleHold{margin-bottom: 35px}
.table-hedsmll {
    font-weight: normal;
    display: inline-block;
    border: 1px solid #000;
    padding: 3px 5px;
}
table{border: none;}
.tbleHold td,.tbleHold th{
    padding: 10px 0
}
td, th {
    padding: 0;
    border: none;
}

.modal-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1040;
    background: #000 !important;
}



.modal-small{
        width: 370px;
    margin-left: -170px;
}



.line span{font-size: 18px; border: 1px solid #000; padding: 5px ; display: inline-block; line-height: 1}
.tableCell {
    text-align: center;
    background: #92d36e;
    padding: 30px 10px;
    border: 1px solid #000;
    margin-bottom: 15px
}
.tableBorder table tr td {
    border: 1px solid;
    width: 50%;
    padding: 5px;
}

.tableBorder table {
    border: 1px solid #000;
    width: 100%
}
.tableBorder {
    padding: 0 0 30px; 
}
.col-6 {
    width: 50%;
    float: left;
    padding: 0 15px
}
.rightBrdr{border-right: 3px solid #000}

.row{margin: 0 -15px}
.modal-xl .modal-content{padding: 0}
.modal-xl{
        width: 900px;
    margin-left: -445px;
}
.table {
    display: table;
    width: 100%;
    
}
.table-div{padding: 40px 25px;}
.table .cell{display: table-cell;}
.table>.cell:first-child{vertical-align: top;}
.table>.cell:last-child{vertical-align: bottom;}
.cell img{max-width: 100%; height: auto;}
.cell label {
    margin-bottom: 10px;
    display: block;
    white-space: nowrap;
}
.padding-default {padding: 0}
/*.greenBox*/ .tableBorder {
    padding: 0 15px 30px;
}
.tableBorder table thead tr td{
        background-color: #92d36e;
}
.col-6.leftBrdr.padding-default {
    padding-right: 20px;
}

.dataTables_wrapper .dataTables_filter{
    float:left;
    margin-bottom: 15px;
}

.tblDataTable tfoot {
    display: table-header-group;
}

.tblDataTable tfoot th{
   padding : 5px 3px !important;
}

.tblDataTable tfoot input {
    width: 100%;
    font-size: 10px;
}

.dataTables_filter{
    display: none;
}

.tblDataTable thead{
    position: -webkit-sticky;
position: -moz-sticky;
position: -ms-sticky;
position: -o-sticky;
position: sticky;
top: 0;
}

.tblDataTable tfoot{
    position: -webkit-sticky;
position: -moz-sticky;
position: -ms-sticky;
position: -o-sticky;
position: sticky;
}

